ingress/ingress-myapp-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-myapp-tls
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - myapp.zxl.com
    secretName: myapp-ingress-secret
  rules:
  - host: myapp.zxl.com
    http:
      paths:
      - path:
        backend:
          serviceName: myapp
          servicePort: 80
